# Arky-Finances

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt  vercel.json
backend/app/: __init__.py  init_db.py  main.py
backend/app/core/: config.py  current_user.py  database.py
backend/app/models/: __init__.py  expense.py  goal.py  income.py  mixins.py  profile.py  scenario.py  user.py
backend/app/routers/: expenses.py  goals.py  incomes.py  insights.py  profile.py  scenarios.py  users.py
backend/app/schemas/: expense.py  goal.py  income.py  insights.py  profile.py  scenario.py  user.py
backend/app/services/: __init__.py  projection.py  seed.py
backend/sql/: supabase_init.sql
frontend/: .env.example  angular.json  package-lock.json  package.json  vercel.mjs
frontend/src/: index.html  styles.scss
frontend/src/app/: app.config.ts  app.routes.ts
frontend/src/app/core/models/: finance.models.ts
frontend/src/app/core/services/: api.service.ts  display-format.service.ts  expense.service.ts  goal.service.ts  income.service.ts  insights.service.ts  profile.service.ts  scenario.service.ts  user-context.service.ts  user.service.ts
frontend/src/app/layout/: shell-layout.component.html  shell-layout.component.scss  shell-layout.component.ts
frontend/src/app/pages/analytics/: analytics-page.component.html  analytics-page.component.scss  analytics-page.component.ts
frontend/src/app/pages/expenses/: expenses-page.component.ts  (+1 more)
frontend/src/environments/: environment.ts
scripts/: init-db.ps1  start-backend.ps1  start-frontend.ps1
(+15 files in other folders)
